update api design
